// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render disabled input-components when disabled 1`] = `
<div
  class="grid grid"
>
  <div
    class="item size size-6 space-before-0 space-after-0"
  >
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-lock"
          class="su-lock icon default"
        />
      </div>
      <input
        type="password"
        value=""
      />
    </label>
  </div>
  <div
    class="item item size size-6 space-before-0 space-after-0"
  >
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-lock"
          class="su-lock icon default"
        />
      </div>
      <input
        type="password"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`Should render two password fields and add a debounced function 1`] = `
<div
  class="grid grid"
>
  <div
    class="item size size-6 space-before-0 space-after-0"
  >
    <label
      class="input default left disabled"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-lock"
          class="su-lock icon default"
        />
      </div>
      <input
        disabled=""
        type="password"
        value=""
      />
    </label>
  </div>
  <div
    class="item item size size-6 space-before-0 space-after-0"
  >
    <label
      class="input default left disabled"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-lock"
          class="su-lock icon default"
        />
      </div>
      <input
        disabled=""
        type="password"
        value=""
      />
    </label>
  </div>
</div>
`;
